@@ -2,7 +2,6 @@ package pe.edu.upc.travelmatch.geolocationv2.interfaces.rest;
 
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -27,12 +26,10 @@ import pe.edu.upc.travelmatch.geolocationv2.interfaces.rest.transform.CreateDest
 import pe.edu.upc.travelmatch.geolocationv2.interfaces.rest.transform.DestinationResourceFromEntityAssembler;
 import pe.edu.upc.travelmatch.geolocationv2.interfaces.rest.transform.UpdateDestinationCommandFromResourceAssembler;
 
-/**
- * REST controller for Destinations.
- */
-@CrossOrigin(origins = "*", methods = {
-    RequestMethod.POST, RequestMethod.GET, RequestMethod.PUT, RequestMethod.DELETE
-})
+/** Documentation. */
+@CrossOrigin(
+    origins = {"http://localhost:5173", "http://localhost:4200"},
+    methods = {RequestMethod.POST, RequestMethod.GET, RequestMethod.PUT, RequestMethod.DELETE})
 @RestController
 @RequestMapping(value = "/api/v1/destinations", produces = MediaType.APPLICATION_JSON_VALUE)
 @Tag(name = "Destinations", description = "Destination Management Endpoints")
@@ -40,103 +37,72 @@ public class DestinationsController {
   private final DestinationQueryService destinationQueryService;
   private final DestinationCommandService destinationCommandService;
 
-  /**
-   * Constructor.
-   *
-   * @param destinationQueryService   destination query service
-   * @param destinationCommandService destination command service
-   */
-  public DestinationsController(DestinationQueryService destinationQueryService,
-                                DestinationCommandService destinationCommandService) {
+  /** Constructs a new DestinationsController. */
+  public DestinationsController(
+      DestinationQueryService destinationQueryService,
+      DestinationCommandService destinationCommandService) {
     this.destinationQueryService = destinationQueryService;
     this.destinationCommandService = destinationCommandService;
   }
 
-  /**
-   * Create a destination.
-   *
-   * @param resource the create resource
-   * @return the created destination resource
-   */
+  /** Create destination. */
   @PostMapping
   public ResponseEntity<DestinationResource> createDestination(
       @RequestBody CreateDestinationResource resource) {
-    var createDestinationCommand = CreateDestinationCommandFromResourceAssembler
-        .toCommandFromResource(resource);
+    var createDestinationCommand =
+        CreateDestinationCommandFromResourceAssembler.toCommandFromResource(resource);
     var destinationId = this.destinationCommandService.handle(createDestinationCommand);
     if (destinationId.equals(0L)) {
       return ResponseEntity.badRequest().build();
     }
     var getDestinationByIdQuery = new GetDestinationByIdQuery(destinationId);
-    var optionalDestination = this.destinationQueryService.handle(getDestinationByIdQuery);
-    var destinationResource = DestinationResourceFromEntityAssembler
-        .toResourceFromEntity(optionalDestination.get());
-    return new ResponseEntity<>(destinationResource, HttpStatus.CREATED);
+    return this.destinationQueryService
+        .handle(getDestinationByIdQuery)
+        .map(DestinationResourceFromEntityAssembler::toResourceFromEntity)
+        .map(resourceCreated -> new ResponseEntity<>(resourceCreated, HttpStatus.CREATED))
+        .orElseGet(() -> ResponseEntity.badRequest().build());
   }
 
-  /**
-   * Get all destinations.
-   *
-   * @return list of destination resources
-   */
+  /** Get all destinations. */
   @GetMapping
   public ResponseEntity<List<DestinationResource>> getAllDestinations() {
     var getAllDestinationsQuery = new GetAllDestinationsQuery();
     var destinations = this.destinationQueryService.handle(getAllDestinationsQuery);
-    var destinationResources = destinations.stream()
-        .map(DestinationResourceFromEntityAssembler::toResourceFromEntity)
-        .collect(Collectors.toList());
+    var destinationResources =
+        destinations.stream()
+            .map(DestinationResourceFromEntityAssembler::toResourceFromEntity)
+            .toList();
     return ResponseEntity.ok(destinationResources);
   }
 
-  /**
-   * Get a destination by id.
-   *
-   * @param destinationId the destination id
-   * @return the destination resource
-   */
+  /** Get destination by id. */
   @GetMapping("/{destinationId}")
   public ResponseEntity<DestinationResource> getDestinationById(@PathVariable Long destinationId) {
     var getDestinationByIdQuery = new GetDestinationByIdQuery(destinationId);
-    var optionalDestination = this.destinationQueryService.handle(getDestinationByIdQuery);
-    if (optionalDestination.isEmpty()) {
-      return ResponseEntity.badRequest().build();
-    }
-    var destinationResource = DestinationResourceFromEntityAssembler
-        .toResourceFromEntity(optionalDestination.get());
-    return ResponseEntity.ok(destinationResource);
+    return this.destinationQueryService
+        .handle(getDestinationByIdQuery)
+        .map(DestinationResourceFromEntityAssembler::toResourceFromEntity)
+        .map(ResponseEntity::ok)
+        .orElseGet(() -> ResponseEntity.badRequest().build());
   }
 
-  /**
-   * Update a destination.
-   *
-   * @param destinationId the destination id
-   * @param resource      the update resource
-   * @return the updated destination resource
-   */
+  /** Update destination. */
   @PutMapping("/{destinationId}")
-  public ResponseEntity<DestinationResource> updateDestination(@PathVariable Long destinationId,
-                                                               @RequestBody DestinationResource
-                                                                   resource) {
-    var updateDestinationCommand = UpdateDestinationCommandFromResourceAssembler
-        .toCommandFromResource(destinationId, resource);
-    var optionalDestination = this.destinationCommandService.handle(updateDestinationCommand);
-    if (optionalDestination.isEmpty()) {
-      return ResponseEntity.badRequest().build();
-    }
-    var destinationResource = DestinationResourceFromEntityAssembler
-        .toResourceFromEntity(optionalDestination.get());
-    return ResponseEntity.ok(destinationResource);
+  public ResponseEntity<DestinationResource> updateDestination(
+      @PathVariable Long destinationId, @RequestBody DestinationResource resource) {
+    var updateDestinationCommand =
+        UpdateDestinationCommandFromResourceAssembler.toCommandFromResource(
+            destinationId, resource);
+    return this.destinationCommandService
+        .handle(updateDestinationCommand)
+        .map(DestinationResourceFromEntityAssembler::toResourceFromEntity)
+        .map(ResponseEntity::ok)
+        .orElseGet(() -> ResponseEntity.badRequest().build());
   }
 
-  /**
-   * Delete a destination.
-   *
-   * @param destinationId the destination id
-   * @return empty response
-   */
+  /** Delete destination. */
   @DeleteMapping("/{destinationId}")
-  public ResponseEntity<?> deleteDestination(@PathVariable Long destinationId) {
+  public ResponseEntity<Void> deleteDestination(@PathVariable Long destinationId) {
     var deleteDestinationCommand = new DeleteDestinationCommand(destinationId);
     this.destinationCommandService.handle(deleteDestinationCommand);
     return ResponseEntity.noContent().build();
